--- a/asset/CSS/demo.css
+++ b/asset/CSS/demo.css
@@ -1,146 +1,131 @@
-/* .cd__main{
-   background: linear-gradient(to right, #e0eafc, #cfdef3) !important;
-} */
-/* .conbg {
-width: 100%;
-height: 500px;
-} */
-.bg2 {
-z-index: 2;
-position: relative;
-width: 70%;
-/* margin: 100px auto; */
-transform: rotate(10deg);
-background-image: url(https://images.unsplash.com/photo-1623691183627-4d6075a8d0d7?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzIyMzUwNDk&ixlib=rb-4.0.3&q=80);
-background-size: cover;
-background-position: right -50px;
-background-color: lightslategray;
-box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
-}
-.bg1 {
-z-index: 3;
-position: relative;
-margin: auto;
-transform: rotate(-5deg);
-background-image: url(https://images.unsplash.com/photo-1575419268007-a9a5e6b1ce0b?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzIyMzQ5NjY&ixlib=rb-4.0.3&q=80);
-background-size: cover;
-background-position: right -70px;
-background-color: lightslategray;
-box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
-}
-.bg {
-z-index: 4;
-position: relative;
-margin: auto;
-transform: rotate(-5deg);
-height: 500px;
-background-image: url(https://images.unsplash.com/photo-1630534658718-395efda906cb?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzIyMzUxMDA&ixlib=rb-4.0.3&q=80);
-background-size: cover;
-background-position: right -50px;
-background-color: lightslategray;
-box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.5);
-}
-.bg-text {
-width: 100%;
-position: absolute;
-display: inline-block;
-bottom: 0;
-left: 0;
-}
-.bg-text a {
-margin: 5px;
-float: right;
+.slider {
+  margin: 0 auto;
+  max-width: 940px;
 }
 
-#bg1:target .bg {
--webkit-animation: ciut 1s forwards;
-        animation: ciut 1s forwards;
+.slide_viewer {
+  height: 540px;
+  overflow: hidden;
+  position: relative;
 }
-#bg1:target {
--webkit-animation: fre 0.3s forwards;
-        animation: fre 0.3s forwards;
+
+.slide_group {
+  height: 100%;
+  position: relative;
+  width: 100%;
 }
-#bg2:target .bg1 {
--webkit-animation: ciut 1s forwards;
-        animation: ciut 1s forwards;
+
+.slide {
+  display: none;
+  height: 100%;
+  position: absolute;
+  width: 100%;
 }
-#bg2:target {
--webkit-animation: fre1 0.3s forwards;
-        animation: fre1 0.3s forwards;
+
+.slide:first-child {
+  display: block;
 }
-#conbg:target .bg2 {
--webkit-animation: ciut1 1s;
-        animation: ciut1 1s;
+
+.slide:nth-of-type(1) {
+  background: #D7A151;
 }
-@-webkit-keyframes fre1 {
-0% {
-  transform: rotate(10deg);
+
+.slide:nth-of-type(2) {
+  background: #F4E4CD;
 }
-100% {
-  transform: rotate(0deg);
+
+.slide:nth-of-type(3) {
+  background: #C75534;
 }
+
+.slide:nth-of-type(4) {
+  background: #D1D1D4;
 }
-@keyframes fre1 {
-0% {
-  transform: rotate(10deg);
+
+.slide_buttons {
+  left: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
 }
-100% {
-  transform: rotate(0deg);
+
+a.slide_btn {
+  font-size: 42px;
+  margin: 0 0.175em;
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
+
+.slide_btn.active, .slide_btn:hover {
+  color: aliceblue;
+  cursor: pointer;
 }
-@-webkit-keyframes fre {
-0% {
-  transform: rotate(-5deg);
+
+.directional_nav {
+  height: 340px;
+  margin: 0 auto;
+  max-width: 940px;
+  position: relative;
+  top: -440px;
 }
-100% {
-  transform: rotate(-10deg);
+
+.previous_btn {
+  bottom: 0;
+  left: 30px;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  
+
 }
+
+.next_btn {
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+  right: 50px;
+  top: 0;
 }
-@keyframes fre {
-0% {
-  transform: rotate(-5deg);
+
+.previous_btn, .next_btn {
+  cursor: pointer;
+  height: 50px;
+  opacity: 0.5;
+  -webkit-transition: opacity 0.4s ease-in-out;
+  -moz-transition: opacity 0.4s ease-in-out;
+  -ms-transition: opacity 0.4s ease-in-out;
+  -o-transition: opacity 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out;
+  width: 50px;
+  color:aliceblue !important;
+  
 }
-100% {
-  transform: rotate(-10deg);
-}
-}
-@-webkit-keyframes ciut {
-0% {
+
+.previous_btn:hover, .next_btn:hover {
   opacity: 1;
-  transform: rotate(-5deg) scale(1);
 }
-100% {
-  opacity: 0;
-  transform: rotate(360deg) scale(0);
+
+@media only screen and (max-width: 767px) {
+  .previous_btn {
+    left: 50px;
+  }
+  .next_btn {
+    right: 50px;
+  }
 }
+.slide_show{
+  position: relative;
+  padding-left: 20px;
+  display: block;
+  margin-bottom: -250px;
+  padding-top:120px ;
 }
-@keyframes ciut {
-0% {
-  opacity: 1;
-  transform: rotate(-5deg) scale(1);
-}
-100% {
-  opacity: 0;
-  transform: rotate(360deg) scale(0);
-}
-}
-@-webkit-keyframes ciut1 {
-0% {
-  opacity: 0;
-  transform: rotate(0deg) scale(0);
-}
-100% {
-  opacity: 1;
-  transform: rotate(370deg) scale(1);
-}
-}
-@keyframes ciut1 {
-0% {
-  opacity: 0;
-  transform: rotate(0deg) scale(0);
-}
-100% {
-  opacity: 1;
-  transform: rotate(370deg) scale(1);
-}
+
+.slide_group .slide{
+  background-position: center;
+  background-size: cover;
+  background-repeat: none;
 }
